k8s/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-routing
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
