k8s/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: raffle-service-v1        
spec:
  type: ClusterIP               
  selector:
    app: raffle                 
    version: v1
  ports:
    - protocol: TCP
      port: 80                  
      targetPort: 8080
