k8s/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: raffle-service-v2        
spec:
  type: ClusterIP               
  selector:
    app: raffle                 
    version: v2
  ports:
    - protocol: TCP
      port: 80                  
      targetPort: 8080
