k8s/service.yaml
# 1. 실제 v1 앱으로 연결되는 서비스
apiVersion: v1
kind: Service
metadata:
  name: raffle-service-v1
spec:
  type: ClusterIP
  selector:
    app: raffle
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# 2. 실제 v2 앱으로 연결되는 서비스
apiVersion: v1
kind: Service
metadata:
  name: raffle-service-v2
spec:
  type: ClusterIP
  selector:
    app: raffle
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# 3. Ingress canary-routing 백엔드용
apiVersion: v1
kind: Service
metadata:
  name: canary-routing
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
